-bug#0000965: When setting filters under utilities, pressing enter takes you back to the main page
-bug#0000966: Log file viewing utility has no ability to filter
-bug#0000969: In some versions of PHP, the graph tree will not view properly
-bug#0000970: Incorrect debug messages in lib/ping.php for failed UDP ping
-bug#0000974: No graphs on Fedora core6 using sunone/iplanet 6.1 SP5
-bug#0000982: Remove invalid references to the "output_string" column in the "data_input" table
-bug#0000983: Bad SQL: snmp_query_graph_rrd.snmp_query_graph_id=
-bug#0000984: Poller does not correctly flush poller_output table after a memory error
-bug: ss_sql.php causes the script server to crash
-bug: Timeshifter added to base code.
-bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
-bug: Command line interface scripts to add devices, graphs, tree's and permissions.
-bug: Correct index error when creating graphs when you have no hosts on your system.
-bug: More recent versions of net-snmp broke SNMP walk functions.
-bug: Adjust for problematic responses from some SNMP agents (IBM AIX).
-bug: Improve logging in cmd.php and poller.php when parameters are not specified correctly.
-bug: Reduce the total number of SQL queries called
-bug: Replace inefficient strip function in process_poller_output
-bug: Some php_snmp implementations return strings as "Hex-STRING:".  In these cases properly resolve the string
-bug: Correctly assign right and left click actions for Opera
-bug: Fix SQL error when viewing an invalid Data Source via the Log Viewer
-bug: Fix command line user copy utility
-feature: Paginate the Graph Creation Page
-feature: Add rra_path as a global.php config variable
-feature: Add drop down actions to data queries
-feature: Add drop down actions to data input methods
-feature: Add drop down actions to user administration
-feature: Add filtering and pagination to data queries
-feature: Add filtering and pagination to data input methods